# dogwalk

./: Cargo.toml  README.md
frontend/: index.html
src/: main.rs  msg.rs  service.rs
static/css/: tailwind.min.css
