[package]
name = "puppydog"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30", features = ["executor"] }
futures-util = { version = "0.3.30", features = ["tokio-io"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["tokio", "full"] }
pca9685-rppal = "0.1.0"
rppal = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.39.2", features = ["full"] }
url = "2.5.4"
